===================
astroid's ChangeLog
===================


What's New in astroid 4.1.0?
============================
Release date: TBA

* Make `type.__new__()` raise clear errors instead of returning `None`

* Move object dunder methods from ``FunctionModel`` to ``ObjectModel`` to make them
  available on all object types, not just functions.

  Closes #2742
  Closes #2741
  Closes pylint-dev/pylint#6094

* ``lineno`` and ``end_lineno`` are now available on ``Arguments``.

* Add helper to iterate over all annotations nodes of function arguments,
  ``Arguments.get_annotations()``.

  Refs #2860



What's New in astroid 4.0.3?
============================
Release date: TBA



What's New in astroid 4.0.2?
============================
Release date: 2025-11-09

* Handle FunctionDef blockstart_tolineno edge cases correctly.

  Refs #2880

* Add ``HTTPMethod`` enum support to brain module for Python 3.11+.

  Refs pylint-dev/pylint#10624
  Closes #2877

What's New in astroid 4.0.1?
============================
Release date: 2025-10-11

* Suppress ``SyntaxWarning`` for invalid escape sequences and return in finally on
  Python 3.14 when parsing modules.

* Assign ``Import`` and ``ImportFrom`` nodes to module locals if used with ``global``.

  Closes pylint-dev/pylint#10632


What's New in astroid 4.0.0?
============================
Release date: 2025-10-05

* Support constraints from ternary expressions in inference.

  Closes pylint-dev/pylint#9729

* Handle deprecated `bool(NotImplemented)` cast in const nodes.

* Add support for boolean truthiness constraints (`x`, `not x`) in inference.

  Closes pylint-dev/pylint#9515

* Fix false positive `invalid-name` on `attrs` classes with `ClassVar` annotated variables.

  Closes pylint-dev/pylint#10525

* Prevent crash when parsing deeply nested parentheses causing MemoryError in python's built-in ast.

  Closes #2643

* Fix crash when inferring namedtuple with invalid field name looking like f-string formatting.
