@@ -7,6 +7,12 @@ What's New in astroid 4.1.0?
 ============================
 Release date: TBA
 
+* Add support for type constraints (`isinstance(x, y)`) in inference.
+
+  Closes pylint-dev/pylint#1162
+  Closes pylint-dev/pylint#4635
+  Closes pylint-dev/pylint#10469
+
 * Make `type.__new__()` raise clear errors instead of returning `None`
 
 * Move object dunder methods from ``FunctionModel`` to ``ObjectModel`` to make them
